--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -93,12 +93,12 @@
         <br><br>
         <div class="icon-container">
           <label for="total" class="label-input" style="font-size: 14px;">DESCUENTO NOMINAL :</label>
-          <input type="text" [(ngModel)]="descuentoN" class="cool-input resultado-input" (input)="calcularSumaTotal()" (input)="onInput2($event)">
+          <input type="text" [(ngModel)]="descuentoN" class="cool-input resultado-input custom-input" (input)="onInput2($event)">
         </div>
         <br><br>
         <div class="icon-container">
           <label for="total" class="label-input" style="font-size: 14px;">DESCUENTO % :</label>
-          <input type="text" [(ngModel)]="descuentoP" class="cool-input resultado-input" (input)="validarDescuento()" (input)="calcularSumaTotal()" (input)="onInput2($event)">
+          <input type="text" [(ngModel)]="descuentoP" class="cool-input resultado-input custom-input" (input)="validarDescuento()" (input)="onInput2($event)">
         </div>
         <br><br>
         <div class="icon-container">
